--- a/test.html
+++ b/test.html
@@ -10,49 +10,54 @@
     }
 
     .pause-menu {
-      
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    background: rgba(0, 0, 0, 0.7);
-    color: rgb(255, 255, 255);
-    padding: 30px;
-    border-radius: 15px;
-    z-index: 1000;
-    box-shadow: 0 4px 8px rgba(68, 159, 238, 0.811);
-    font-family: 'Arial', sans-serif;
-  }
-  .pause-menu h2 {
-    font-size: 32px;
-    margin-bottom: 20px;
-  }
-  .pause-menu button {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: block;
-    margin: 10px auto;
-    padding: 10px 20px;
-    font-size: 18px;
-    background-color: #1e7ddc;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  .pause-menu button:hover {
-    background-color: #ffffff;
-    color: black;
-  }
-  .pause-menu label {
-    display: block;
-    margin: 20px 0;
-    font-size: 18px;
-  }
-  .pause-menu input[type="range"] {
-    width: 80%;
-  }
+
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      background: rgba(0, 0, 0, 0.7);
+      color: rgb(255, 255, 255);
+      padding: 30px;
+      border-radius: 15px;
+      z-index: 1000;
+      box-shadow: 0 4px 8px rgba(68, 159, 238, 0.811);
+      font-family: 'Arial', sans-serif;
+    }
+
+    .pause-menu h2 {
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+
+    .pause-menu button {
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      display: block;
+      margin: 10px auto;
+      padding: 10px 20px;
+      font-size: 18px;
+      background-color: #1e7ddc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .pause-menu button:hover {
+      background-color: #ffffff;
+      color: black;
+    }
+
+    .pause-menu label {
+      display: block;
+      margin: 20px 0;
+      font-size: 18px;
+    }
+
+    .pause-menu input[type="range"] {
+      width: 80%;
+    }
   </style>
 </head>
 
@@ -95,28 +100,6 @@
       });
     }
 
-    function togglePause() {
-      if (isPaused) {
-        isPaused = false;
-        mySound.play();
-        document.getElementById("pause-menu").style.display = "none";
-        myGameArea.interval = setInterval(updateGameArea, 20);
-      } else {
-        isPaused = true;
-        mySound.play();
-        document.getElementById("pause-menu").style.display = "block";
-        clearInterval(myGameArea.interval);
-      }
-    }
-
-    function restartGame() {
-      location.reload();
-    }
-
-    function updateVolume(value) {
-      mySound.sound.volume = value;
-    }
-
     var myGameArea = {
       canvas: document.createElement("canvas"),
       start: function () {
@@ -132,6 +115,8 @@
       },
       stop: function () {
         clearInterval(this.interval);
+        saveScore(this.frameNo);
+        window.location.href = "scores.html";
       },
     };
 
@@ -310,6 +295,38 @@
       myGamePiece.speedX = 0;
       myGamePiece.speedY = 0;
     }
+
+    function togglePause() {
+      if (isPaused) {
+        isPaused = false;
+        mySound.play();
+        document.getElementById("pause-menu").style.display = "none";
+        myGameArea.interval = setInterval(updateGameArea, 20);
+      } else {
+        isPaused = true;
+        mySound.play();
+        document.getElementById("pause-menu").style.display = "block";
+        clearInterval(myGameArea.interval);
+      }
+    }
+
+    function restartGame() {
+      location.reload();
+    }
+
+    function updateVolume(value) {
+      mySound.sound.volume = value;
+    }
+
+
+    function saveScore(score) {
+      let scores = JSON.parse(localStorage.getItem("highScores")) || [];
+      scores.push(score);
+      scores.sort((a, b) => b - a);
+      scores = scores.slice(0, 10);
+      localStorage.setItem("highScores", JSON.stringify(scores));
+    }
+
   </script>
 
   <button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.1)">
