--- a/juego.html
+++ b/juego.html
@@ -155,7 +155,7 @@
       stop: function () {
         clearInterval(this.interval);
         saveScore(this.frameNo);
-        window.location.href = "scores.html";
+        window.location.href = "game_over.html";
       },
     };
 
