--- a/creditos.html
+++ b/creditos.html
@@ -29,7 +29,7 @@
   <body onload="initCredits()">
     <canvas id="backgroundCanvas"></canvas>
     <div class="btn-container">
-      <button onclick="window.location.href='test.html'">Jugar de Nuevo</button>
+      <button onclick="window.location.href='juego.html'">Jugar de Nuevo</button>
       <button onclick="window.location.href='scores.html'" style="left: 10px;">Volver a Puntajes</button>
     </div>
     <script>
@@ -40,77 +40,38 @@
         canvas.width = window.innerWidth - 5;
         canvas.height = window.innerHeight - 100;
         ctx = canvas.getContext("2d");
-        myBackground = new component(canvas.width, canvas.height, "/astro_movie.jpg", 0, 0, "background");
-        mySound = new sound("dorado.mp3");
+
+        var backgroundImage = new Image();
+        backgroundImage.src = "img/image.png"; 
+        backgroundImage.onload = function() {
+          var hRatio = canvas.width / backgroundImage.width;
+          var vRatio = canvas.height / backgroundImage.height;
+          var ratio = Math.min(hRatio, vRatio);
+          var centerShift_x = (canvas.width - backgroundImage.width * ratio) / 2;
+          var centerShift_y = (canvas.height - backgroundImage.height * ratio) / 2;
+          ctx.drawImage(backgroundImage, 0, 0, backgroundImage.width, backgroundImage.height,
+                        centerShift_x, centerShift_y, backgroundImage.width * ratio, backgroundImage.height * ratio);
+          displayCredits(); // Llama a displayCredits después de que la imagen se haya cargado y dibujado
+        };
+
+        mySound = new sound("sound/dorado.mp3");
         mySound.play();
-        myBackground.image.onload = function() {
-          myBackground.update();
-          displayCredits();
-        }
       }
 
       function displayCredits() {
-        ctx.fillStyle = "black";
-        ctx.font = "20px Consolas";
+        ctx.fillStyle = "rgba(0, 0, 0, 0.5)"; 
+        ctx.fillRect(canvas.width / 4, 15, canvas.width / 2, 250);
+
+        ctx.fillStyle = "white"; 
+        ctx.font = "30px Arial"; 
         ctx.textAlign = "center";
-        ctx.fillText("Desarrolladores", canvas.width / 2, 50);
-        ctx.fillText("Dennisse Andrade", canvas.width / 2, 105);
-        ctx.fillText("Daniel Lumiquinga", canvas.width / 2, 150);
-        ctx.fillText("Anddy Quisilema", canvas.width / 2, 205);
-        ctx.fillText("Felipe Ramos", canvas.width / 2, 250);
-        ctx.fillText("Cristina Rivera", canvas.width / 2, 300);
 
-        ctx.fillText("V 1.1", canvas.width / 2, 350);
-
-        ctx.fillText("2024", canvas.width / 2, 390);
-
-
-        ctx.fillText("Gracias por jugar!", canvas.width / 2, 430);
-      }
-
-      function sound(src) {
-        this.sound = document.createElement("audio");
-        this.sound.src = src;
-        this.sound.setAttribute("preload", "auto");
-        this.sound.setAttribute("controls", "none");
-        this.sound.style.display = "none";
-        document.body.appendChild(this.sound);
-        this.play = function () {
-          this.sound.play();
-        };
-        this.stop = function () {
-          this.sound.pause();
-        };
-      }
-
-      function component(width, height, color, x, y, type) {
-        this.type = type;
-        if (type == "image" || type == "background") {
-          this.image = new Image();
-          this.image.src = color;
-        }
-        this.width = width;
-        this.height = height;
-        this.x = x;
-        this.y = y;
-        this.update = function () {
-          if (type == "image" || type == "background") {
-            if (type == "background") {
-              ctx.globalAlpha = 0.5; // transparencia
-              ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
-              ctx.globalAlpha = 1;
-            } else {
-              ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
-            }
-          } else if (this.type == "text") {
-            ctx.font = this.width + " " + this.height;
-            ctx.fillStyle = color;
-            ctx.fillText(this.text, this.x, this.y);
-          } else {
-            ctx.fillStyle = color;
-            ctx.fillRect(this.x, this.y, this.width, this.height);
-          }
-        };
+        ctx.fillText("Desarrolladores", canvas.width / 2, 60);
+        ctx.fillText("Dennisse Andrade", canvas.width / 2, 120);
+        ctx.fillText("Daniel Llumiquinga", canvas.width / 2, 150);
+        ctx.fillText("Anddy Quisilema", canvas.width / 2, 180);
+        ctx.fillText("John Felipe Ramos", canvas.width / 2, 210);
+        ctx.fillText("Cristina Rivera", canvas.width / 2, 240);
       }
     </script>
   </body>
