--- a/inicio.html
+++ b/inicio.html
@@ -82,11 +82,11 @@
       }
 
       function mostrarCreditos() {
-        alert("Mostrando créditos...");
+        window.location.href = "creditos.html";
       }
 
       function mostrarScores() {
-        alert("Mostrando scores...");
+        window.location.href = "scores.html";
       }
     </script>
   </body>
