--- a/scores.html
+++ b/scores.html
@@ -42,7 +42,7 @@
         canvas.width = window.innerWidth - 5;
         canvas.height = window.innerHeight - 100;
         ctx = canvas.getContext("2d");
-        myBackground = new component(canvas.width, canvas.height, "img/astro_movie.jpg", 0, 0, "background");
+        myBackground = new component(canvas.width, canvas.height, "img/ini2.jpeg", 0, 0, "background");
         mySound = new sound("sound/dorado.mp3");
         mySound.play();
         myBackground.image.onload = function() {
